--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,507 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>NA MU</title>
+    <link
+    rel="icon"
+    type="image/x-icon"
+    href="./images/icons:logo/NA MU logo.svg"
+  >
+    <!-- Montserrat, sans-serif -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- IBM Plex Sans, sans-serif -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.scss">
+
+    <!-- swiper -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    >
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+    <script src="main.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body" id="top">
+    <header class="page__header header">
+      <div class="containerr">
+        <div class="header__content">
+          <div class="header__top-bar top-bar">
+            <div class="top-bar__content">
+              <div class="header__img"></div>
+              <div class="top-bar__icons">
+                <a href="#menu" class="top-bar__icon icon icon--menu"></a>
+
+                <a href="#" class="top-bar__logo-link">
+                  <img
+                    src="./images/icons:logo/NA MU logo.svg"
+                    alt="NA MU logo"
+                    class="top-bar__logo logo"
+                  >
+                </a>
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="header__bottom bottom">
+            <h1 class="bottom__title">
+              ХУДОЖНІЙ
+              <br>
+              МУЗЕЙ
+            </h1>
+
+            <div class="bottom__buy-btn buy-btn">
+              <p class="buy-btn__text">КВИТКИ</p>
+              <div class="buy-btn__buy-rectangle">
+                <a href="https://savelife.in.ua/DONATE/" class="buy-btn__icon icon icon--arrow"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <div class="menu__top-bar top-bar">
+              <a href="#top" class="top-bar__icon icon icon--close"></a>
+            </div>
+
+            <nav class="menu__nav nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#gellery">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#top">Про Нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#current-events">Виставки та події</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#CTA">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="menu__strip"></div>
+
+
+          <div class="menu__schedule schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+            <ul class="schedule__list">
+              <li class="schedule__item">
+                <span class="schedule__weight">12:00 — 20:00</span> середа
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__weight">12:00 — 20:00</span> четвер
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__weight">12:00 — 20:00</span> п’ятниця
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__weight">11:00 — 19:00</span> субота
+              </li>
+
+              <li class="schedule__item">
+                <span class="schedule__weight">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
+
+            <p class="schedule__free-days">
+              <span class="schedule__weight">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="page__main main">
+      <div class="container">
+        <div class="main__content">
+          <section class="main__current-events current-events" id="current-events">
+            <h2 class="current-events__title">
+              Актуальні
+              події
+            </h2>
+
+            <article class="current-events__event event event--1">
+              <img
+                src="./images/actual /actual-img-1.png"
+                alt="Йду і повертаюсь"
+                class="event__img event__img--1"
+              >
+
+              <div class="event__content">
+                <div class="event__date-container">
+                  <p class="event__kind-of-event">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+
+
+                <div class="event__subtitle-container">
+                  <h3 class="event__subtitle">Йду і повертаюсь
+                  </h3>
+
+                  <div class="event__square"></div>
+                </div>
+
+                <p class="event__paragraph">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="current-events__event event event--2">
+              <img
+                src="./images/actual /actual-img-2.png"
+                alt="І спогади і мрії"
+                class="event__img event__img--2"
+              >
+
+              <div class="event__content">
+                <div class="event__date-container">
+                  <p class="event__kind-of-event">ВИСТАВКА</p>
+                  <p class="event__date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="event__subtitle-container event__subtitle-container--2">
+                  <h3 class="event__subtitle">І спогади і мрії</h3>
+
+                  <div class="event__square"></div>
+                </div>
+
+
+                <p class="event__paragraph">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+
+            <article class="current-events__event event event--3">
+              <img
+                src="./images/actual /actual-img-3.png"
+                alt="Sky picture"
+                class="event__img event__img--3"
+              >
+
+
+              <div class="event__exposition">
+                <div class="event__on-img-container">
+                  <div class="event__date-container event__date-container--on-img">
+                    <p class="event__kind-of-event">ЛЕКЦІЯ</p>
+                    <p class="event__date">26/08/2019 - 11:00</p>
+                  </div>
+                  <h3 class="event__subtitle event__subtitle--position">Від класицизму до романтизму</h3>
+                </div>
+              </div>
+            </article>
+          </section>
+
+          <section class="main__gallery gallery" id="gellery">
+            <h2 class="gallery__title">
+              Галерея
+            </h2>
+
+            <div class="gallery__pictures">
+
+              <!-- Slider main container -->
+              <div class="swiper">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                  <!-- Slides -->
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/gellery/gellery-img-1.png"
+                      alt="Наречена. Федір Кричевський"
+                      class="pictures__picture picture picture--1"
+                    >
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img
+                    src="./images/gellery/gellery-img-2.png"
+                    alt="Глухомань. Село взимку. Петро Левченко"
+                    class="pictures__picture picture picture--2"
+                  >
+                  </div>
+
+                  <div class="swiper-slide">Slide 3</div>
+                  ...
+                </div>
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+[]
+            <!-- <div class="wrapper">
+          <div class="image-slider swiper-container">
+              <div class="image-slider__wrapper swiper-wrapper">
+                <div class="image-slider__slide swiper-slide">
+                  <div class="image-slider__image">
+                    <img
+                    src="./images/gellery/gellery-img-1.png"
+                    alt="Наречена. Федір Кричевський"
+                    class="pictures__picture picture picture--1"
+                  >
+                  </div>
+
+                  <div class="image-slider__image">
+                    <img
+                    src="./images/gellery/gellery-img-3.png"
+                    alt="Невідома картина в стилі імпресіонізму. Можна було б назвати - Літній день у парку"
+                    class="pictures__picture picture picture--3"
+                  >
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div> -->
+
+            <!-- Slider main container -->
+            <!-- <div class="swiper"> -->
+            <!-- Additional required wrapper -->
+            <!-- <div class="image-slider swiper-wrapper"> -->
+            <!-- Slides -->
+            <!-- <div class="swiper-slide"> -->
+            <!-- <div class="con">
+                  <img
+                  src="./images/gellery/gellery-img-1.png"
+                  alt="Наречена. Федір Кричевський"
+                  class="pictures__picture picture picture--1"
+                >
+                </div> -->
+            <!-- </div> -->
+
+            <!-- <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div> -->
+
+            <!-- </div> -->
+            <!-- If we need pagination -->
+            <!-- <div class="swiper-pagination"></div> -->
+
+            <!-- If we need scrollbar -->
+            <!-- <div class="swiper-scrollbar"></div>
+            <div class="swiper-pagination"></div>
+          </div> -->
+
+
+            <!-- <div class="con">
+              <img
+              src="./images/gellery/gellery-img-1.png"
+              alt="Наречена. Федір Кричевський"
+              class="pictures__picture picture picture--1"
+            >
+            </div>
+
+
+            <div class="con">
+                <img
+                src="./images/gellery/gellery-img-2.png"
+                alt="Глухомань. Село взимку. Петро Левченко"
+                class="pictures__picture picture picture--2"
+              >
+            </div>
+
+
+            <div class="con">
+              <img
+              src="./images/gellery/gellery-img-3.png"
+              alt="Невідома картина в стилі імпресіонізму. Можна було б назвати - Літній день   у парку"
+              class="pictures__picture picture picture--3"
+            >
+            </div>
+
+            <div class="con">
+                <img
+                src="./images/gellery/gellery-img-4.png"
+                alt="На море. Микола Глущенко"
+                class="pictures__picture picture picture--4"
+              >
+            </div>
+
+            <div class="con">
+                <img
+                src="./images/gellery/gellery-img-5.png"
+                alt="Гуси. Кіріак Костанді"
+                class="pictures__picture picture picture--5"
+              >
+            </div> -->
+            <!-- </div> -->
+            <!--
+        <div class="gallery__dots dots">
+          <span class="dots__dot dot dot--1" onclick="currentSlide(1)"></span>
+          <span class="dots__dot dot dot--2" onclick="currentSlide(2)"></span>
+          <span class="dots__dot dot dot--3" onclick="currentSlide(3)"></span>
+          <span class="dots__dot dot dot--4" onclick="currentSlide(4)"></span>
+        </div> -->
+          </section>
+        </div>
+      </div>
+
+      <section class="main__subscription subscription">
+        <div class="container">
+          <h2 class="subscription__title">Підписка</h2>
+
+          <p class="subscription__advice">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+          <div class="subscription__input-container">
+            <input
+              class="subscription__input"
+              type="email"
+              placeholder="Email"
+            >
+
+            <div class="subscription__rectangle">
+              <a href="#" class="subscription__icon icon icon--arrow-black"></a>
+            </div>
+          </div>
+        </div>
+
+      </section>
+
+      <div class="container">
+        <div class="main__content">
+          <section class="main__CTA CTA" id="CTA">
+            <div class="CTA__top">
+              <div class="CTA__icons-and-logo">
+                <a href="#top" class="CTA__logo-link">
+                  <img
+                    src="./images/icons:logo/NA MU logo.svg"
+                    alt="NA MU logo"
+                    class="CTA__logo logo"
+                  >
+                </a>
+
+                <div class="CTA__icons">
+                  <a href="#https://www.facebook.com/namu.museum/? locale=uk_UA" class="CTA__icon icon icon--facebook"></a>
+
+                  <a href="#https://www.instagram.com/namu.museum/" class="CTA__icon icon icon--instagram"></a>
+                </div>
+              </div>
+
+              <div class="CTA__schedule-contacts-container">
+                <div class="CTA__schedule schedule schedule--black">
+                  <h4 class="schedule__title">Графік роботи</h4>
+                  <ul class="schedule__list">
+                    <li class="schedule__item">
+                      <span class="schedule__weight">12:00 — 20:00</span> середа
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__weight">12:00 — 20:00</span> четвер
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__weight">12:00 — 20:00</span> п’ятниця
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__weight">11:00 — 19:00</span> субота
+                    </li>
+
+                    <li class="schedule__item">
+                      <span class="schedule__weight">11:00 — 19:00</span> неділя
+                    </li>
+                  </ul>
+
+                  <p class="schedule__free-days">
+                    <span class="schedule__weight schedule__weight--maxw">Вихідні:</span> понеділок, вівторок
+                    <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+
+                <div class="CTA__contacts contacts">
+                  <h4 class="contacts__title">Контакти:</h4>
+                  <ul class="contacts__list">
+                    <li class="contacts__item">
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </li>
+
+                    <li class="contacts__item">
+                      тел. +38 (044) 278-13-57
+                    </li>
+
+                    <li class="contacts__item">
+                      факс +38 (044) 278-74-54
+                    </li>
+
+                    <li class="contacts__item">
+                      e-mail: info@namu.kiev.ua
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="CTA__go-top">
+              <a href="#https://www.facebook.com/namu.museum/?  locale=uk_UA" class="go-top__icon icon icon--arrow-up"></a>
+            </div>
+
+            <div class="CTA__bottom">
+              <div class="CTA__strip"></div>
+
+              <nav class="CTA__nav nav">
+                <ul class="nav__list nav__list--black">
+                  <li class="nav__item">
+                    <a class="nav__link nav__link--black" href="#gellery">Галерея</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link nav__link--black" href="#top">Про Нас</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link nav__link--black" href="#current-events">Виставки та події</a>
+                  </li>
+
+                  <li class="nav__item">
+                    <a class="nav__link nav__link--black" href="#CTA">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="page__footer footer">
+      <div class="container">
+
+        <div class="footer__copyrights">
+          <p class="footer__copyright">Designed by Zhyriada Marina</p>
+          <p class="footer__designed-by">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
