--- a/src/index.html
+++ b/src/index.html
@@ -19,62 +19,6 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
-    <script>
-      let slideIndex = 1;
-
-      function showSlides(n) {
-        let i;
-        const windowSize = window.screen.width;
-        const slide = document.getElementsByClassName('slides__wrapper');
-        const dots = document.getElementsByClassName('slides__dot');
-
-        for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(' active', '');
-        }
-
-        if (windowSize < 768) {
-          if (n === 1) {
-            slide[0].style.left = '0';
-            dots[0].className += ' active';
-          }
-
-          if (n === 2) {
-            slide[0].style.left = '-296px';
-            dots[1].className += ' active';
-          }
-
-          if (n === 3) {
-            slide[0].style.left = '-592px';
-            dots[2].className += ' active';
-          }
-
-          if (n === 4) {
-            slide[0].style.left = '-888px';
-            dots[3].className += ' active';
-          }
-        } else if (windowSize < 1280) {
-          if (n === 1) {
-            slide[0].style.left = '0';
-            dots[0].className += ' active';
-          }
-
-          if (n === 2) {
-            slide[0].style.left = '-356px';
-            dots[1].className += ' active';
-          }
-
-          if (n === 3) {
-            slide[0].style.left = '-712px';
-            dots[2].className += ' active';
-          }
-
-          if (n === 4) {
-            slide[0].style.left = '-1068px';
-            dots[3].className += ' active';
-          }
-        }
-      }
-    </script>
 
     <header class="header">
       <div class="header__top-bar">
@@ -277,19 +221,13 @@
           </div>
 
           <div class="slides__nav">
-            <script>
-              function currentSlide(n) {
-                showSlides(slideIndex = n);
-              }
-            </script>
+            <div class="slides__dot active" id="currentSlide1"></div>
 
-            <div class="slides__dot active" onclick="currentSlide(1)"></div>
+            <div class="slides__dot" id="currentSlide2"></div>
 
-            <div class="slides__dot" onclick="currentSlide(2)"></div>
+            <div class="slides__dot" id="currentSlide3"></div>
 
-            <div class="slides__dot" onclick="currentSlide(3)"></div>
-
-            <div class="slides__dot" onclick="currentSlide(4)"></div>
+            <div class="slides__dot" id="currentSlide4"></div>
           </div>
         </div>
       </section>
@@ -500,7 +438,77 @@
         </div>
       </footer>
     </main>
+
     <script>
+      let slideIndex = 1;
+
+
+      const slide1 = document.getElementById("currentSlide1");
+      const slide2 = document.getElementById("currentSlide2");
+      const slide3 = document.getElementById("currentSlide3");
+      const slide4 = document.getElementById("currentSlide4");
+
+      slide1.addEventListener("click", function(){currentSlide(1)});
+      slide2.addEventListener("click", function(){currentSlide(2)});
+      slide3.addEventListener("click", function(){currentSlide(3)});
+      slide4.addEventListener("click", function(){currentSlide(4)});
+
+      function currentSlide(n) {
+        showSlides(slideIndex = n);
+      }
+
+      function showSlides(n) {
+        let i;
+        const windowSize = window.screen.width;
+        const slide = document.getElementsByClassName('slides__wrapper');
+        const dots = document.getElementsByClassName('slides__dot');
+
+        for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(' active', '');
+        }
+
+        if (windowSize < 768) {
+          if (n === 1) {
+            slide[0].style.left = '0';
+            dots[0].className += ' active';
+          }
+
+          if (n === 2) {
+            slide[0].style.left = '-296px';
+            dots[1].className += ' active';
+          }
+
+          if (n === 3) {
+            slide[0].style.left = '-592px';
+            dots[2].className += ' active';
+          }
+
+          if (n === 4) {
+            slide[0].style.left = '-888px';
+            dots[3].className += ' active';
+          }
+        } else if (windowSize < 1280) {
+          if (n === 1) {
+            slide[0].style.left = '0';
+            dots[0].className += ' active';
+          }
+
+          if (n === 2) {
+            slide[0].style.left = '-356px';
+            dots[1].className += ' active';
+          }
+
+          if (n === 3) {
+            slide[0].style.left = '-712px';
+            dots[2].className += ' active';
+          }
+
+          if (n === 4) {
+            slide[0].style.left = '-1068px';
+            dots[3].className += ' active';
+          }
+        }
+      }
       currentSlide(slideIndex);
     </script>
   </body>
