--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,300 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <title>Museum</title>
+    <link rel="icon" href="./images/icons/logo.svg" type="image/x-icon" >
+    <link rel="stylesheet" href="./styles/main.scss" >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body id="menu">
+    <a href="#menu" class="header-burger">
+      <img class="header__burger" src="./images/icons/burger.svg" alt="menu" >
+    </a>
+    <a href="#">
+      <div class="menu-wrapper"></div>
+    </a>
+
+    <div class="menu">
+      <a href="#" class="menu-close">
+        <img
+          class="menu-close__image"
+          src="./images/icons/close.svg"
+          alt="close"
+        >
+      </a>
+      <div class="menu__navigation">
+        <a href="#gallery" class="menu__link">Галерея</a>
+        <a href="#about" class="menu__link">Про Нас</a>
+        <a href="#events" class="menu__link">Виставки та події</a>
+        <a href="#contacts" class="menu__link">Контакти</a>
+      </div>
+      <div class="menu__container">
+        <div class="menu__container-body">
+          <h4 class="menu__title menu__text">Графік роботи</h4>
+          <div class="menu__texts">
+            <p class="menu__text"><strong>12:00 — 20:00</strong> середа</p>
+            <p class="menu__text"><strong>12:00 — 20:00</strong> четвер</p>
+            <p class="menu__text"><strong>12:00 — 20:00</strong> п’ятниця</p>
+            <p class="menu__text"><strong>12:00 — 19:00</strong> субота</p>
+            <p class="menu__text"><strong>12:00 — 19:00</strong> неділя</p>
+          </div>
+        </div>
+        <p class="menu__text menu__text--holidays">
+          Вихідні понеділок, вівторок<br >
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+    </div>
+
+    <header class="header">
+      <a href="#events" class="header__subtitle">події</a>
+      <div class="header__container">
+        <a href="#" class="header-logo">
+          <img
+            class="header-logo__icon"
+            src="./images/icons/logo.svg"
+            alt="Logo"
+          >
+        </a>
+        <img
+          class="header__image"
+          src="./images/header/header.png"
+          alt="header"
+        >
+      </div>
+      <div class="header__container-left">
+        <h1 class="header__title">художній музей</h1>
+        <a class="header__button" href="#events"> квитки </a>
+      </div>
+    </header>
+
+    <main class="main" id="events">
+      <section class="events">
+        <h2 class="events__title">Актуальні події</h2>
+        <div class="events__container">
+          <article class="event">
+            <img src="./images/events/1.png" alt="1" class="event__image">
+            <div class="event__container-wrapper">
+              <div class="event__container">
+                <p class="event__container-title">ВИСТАВКА</p>
+                <p class="event__container-date">26.08-29.11.2019</p>
+              </div>
+              <h3
+                class="event__title event__title--point event__title--point--1"
+              >
+                Йду і повертаюсь
+              </h3>
+              <p class="event__text">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво  другої&nbsp;половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+          <article class="event">
+            <img src="./images/events/2.png" alt="2" class="event__image" >
+            <div class="event__container-wrapper event__container-wrapper--2">
+              <div class="event__container">
+                <p class="event__container-title">ВИСТАВКА</p>
+                <p class="event__container-date">26.08-29.11.2019</p>
+              </div>
+              <h3
+                class="event__title event__title--point event__title--point--2"
+              >
+                І спогади і мрії
+              </h3>
+              <p class="event__text event__text--2">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+
+        <article class="event event--last">
+          <img
+            src="./images/events/3.png"
+            alt="2"
+            class="event__image event__image--last"
+          >
+          <div class="event__text-wrapper">
+            <div class="event__container event__container--last">
+              <p class="event__container-title">ЛЕКЦІЯ</p>
+              <p class="event__container-date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="event__title event__title--last">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </article>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__container">
+          <div class="gallery__item"></div>
+          <div class="gallery__item"></div>
+          <div class="gallery__item"></div>
+          <div class="gallery__item"></div>
+        </div>
+        <div class="dots">
+          <div class="dots__item dots__item--active"></div>
+          <div class="dots__item"></div>
+          <div class="dots__item"></div>
+          <div class="dots__item"></div>
+        </div>
+      </section>
+
+      <section class="subscription" id="about">
+        <h2 class="subscription__title">Підписка</h2>
+        <p class="subscription__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <div class="subscription__field-wrapper">
+          <form
+            class="subscription__field-wrapper"
+            onsubmit="this.reset(); return false;"
+          >
+            <label>
+              <input
+                type="email"
+                class="subscription__field"
+                placeholder="E-mail"
+                pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                required
+              >
+            </label>
+            <button type="submit" class="subscription__button"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__top">
+        <div class="footer__social">
+          <a href="#" class="footer-logo">
+            <img
+              class="footer-logo__icon"
+              src="./images/icons/logo.svg"
+              alt="Logo"
+            >
+          </a>
+          <div class="social">
+            <a
+              href="https://www.facebook.com/groups/1874865979439648"
+              target="_blank"
+            >
+              <img
+                class="social__icon"
+                src="./images/icons/cf.svg"
+                alt="facebook"
+              >
+            </a>
+            <a href="https://www.instagram.com/balloon_museum/" target="_blank">
+              <img
+                class="social__icon"
+                src="./images/icons/ci.svg"
+                alt="instagram"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__body">
+          <div class="footer__container">
+            <div class="footer__container-left">
+              <h4 class="footer__title footer__text">Графік роботи</h4>
+              <div class="footer__texts">
+                <p class="footer__text">
+                  <strong>12:00 — 20:00</strong> середа
+                </p>
+                <p class="footer__text">
+                  <strong>12:00 — 20:00</strong> четвер
+                </p>
+                <p class="footer__text">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </p>
+                <p class="footer__text">
+                  <strong>12:00 — 19:00</strong> субота
+                </p>
+                <p class="footer__text">
+                  <strong>12:00 — 19:00</strong> неділя
+                </p>
+              </div>
+              <p class="footer__text footer__text--holidays">
+                Вихідні понеділок, вівторок<br >
+                Каса припиняє роботу за 1 годину<br >
+                до закриття музею
+              </p>
+            </div>
+            <div class="footer__container-right footer__container-contacts">
+              <h4 class="footer__title footer__text">Контакти:</h4>
+              <div class="footer__texts">
+                <p class="footer__text">
+                  <a
+                    class="footer__link"
+                    href="https://goo.gl/maps/48tEobHCHUCZk3PcA"
+                    target="_blank"
+                  >
+                      вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </p>
+                <p class="footer__text">
+                  тел.
+                  <a
+                    class="footer__link"
+                    href="tel: +380442781357"
+                  >
+                    +38 (044) 278-13-57
+                  </a>
+                </p>
+                <p class="footer__text">
+                  факс
+                  <a
+                    class="footer__link"
+                    href="tel: +380442787454"
+                  >
+                    +38 (044) 278-74-54
+                  </a>
+                </p>
+                <p class="footer__text">
+                  e-mail:
+                  <a
+                    class="footer__link"
+                    href="mailto: info@namu.kiev.ua"
+                  >
+                    info@namu.kiev.ua
+                  </a>
+                </p>
+              </div>
+            </div>
+            <a href="#" class="footer-up">
+              <img
+                class="footer-up__image"
+                src="./images/icons/arrow-up.svg"
+                alt="up"
+              >
+            </a>
+          </div>
+
+          <div class="footer__nav">
+            <a href="#gallery" class="footer__link">Галерея</a>
+            <a href="#about" class="footer__link">Про Нас</a>
+            <a href="#events" class="footer__link">Виставки та події</a>
+            <a href="#contacts" class="footer__link">Контакти</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="copy">
+        <div class="copy__text">Designed by Zhyriada Marina</div>
+        <div class="copy__text">Copyright © 2019. All Rights Reserved.</div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
